@@ -3,6 +3,9 @@ Changelog for pdoTools.
 2.1.1 pl
 ==============
 - pdoParser enabled by default.
+- [Fenom] Fixed return content in {$_modx->getChunk}.
+- [pdoTools] Added processing of property sets for chunks.
+- [pdoResources] Set additionalPlaceholders in &tplWrapper
 
 2.1.0 pl
 ==============
